<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/menu_person" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_khordad"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/menu_khordad" />
    </group>

</menu>
